[package]
name = "groundhog"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
dialoguer = { version = "0.11.0", default-features = false }
futures = "0.3.31"
graphql_client = "0.14.0"
humantime = "2.2.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
jsonschema = "0.21.0"
tempfile = "3.20.0"
test-case = "3.3.1"
